# morphism.rs

./: .travis.yml  Cargo.toml  README.md
benches/: bench.rs
doc/: search-index.js
doc/implementors/core/ops/: trait.Fn.js
doc/morphism/: index.html  stability.html  stability.json  struct.Morphism.html
doc/src/morphism/: lib.rs.html
src/: lib.rs
