[package]

name = "morphism"
version = "0.1.0"
authors = [ "Darin Morrison <darinmorrison+rust@gmail.com>" ]
description = "A structure for suspended closure composition in Rust"
documentation = "http://www.rust-ci.org/epsilonz/morphism.rs/doc/morphism/"
keywords = ["closures", "functional", "monoid", "stackless"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/morphism.rs"

[lib]
name = "morphism"
path = "src/lib.rs"
